feat : Implementing auto-rec

--- a/recommendation_system.ipynb
+++ b/recommendation_system.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Imesh7/recommendation_system/blob/main/recommendation_system.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Imesh7/recommendation-system/blob/auto-rec/recommendation_system.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -19,7 +19,7 @@
         },
         "collapsed": true,
         "id": "O19y3RARi2L0",
-        "outputId": "7c170445-80a3-4f82-e9c0-971efa1b4cfb"
+        "outputId": "9233da06-43d6-4b8a-fd26-27af554b3809"
       },
       "outputs": [
         {
@@ -30,6 +30,7 @@
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (3.10.0)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.12/dist-packages (1.6.1)\n",
+            "Requirement already satisfied: torch in /usr/local/lib/python3.12/dist-packages (2.9.0+cpu)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (1.3.3)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (0.12.1)\n",
             "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (4.61.1)\n",
@@ -43,12 +44,21 @@
             "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn) (1.16.3)\n",
             "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn) (1.5.3)\n",
             "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn) (3.6.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from torch) (3.20.0)\n",
+            "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.12/dist-packages (from torch) (4.15.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from torch) (75.2.0)\n",
+            "Requirement already satisfied: sympy>=1.13.3 in /usr/local/lib/python3.12/dist-packages (from torch) (1.14.0)\n",
+            "Requirement already satisfied: networkx>=2.5.1 in /usr/local/lib/python3.12/dist-packages (from torch) (3.6.1)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.12/dist-packages (from torch) (3.1.6)\n",
+            "Requirement already satisfied: fsspec>=0.8.5 in /usr/local/lib/python3.12/dist-packages (from torch) (2025.3.0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch) (3.0.3)\n"
           ]
         }
       ],
       "source": [
-        "!pip install numpy matplotlib pandas scikit-learn"
+        "!pip install numpy matplotlib pandas scikit-learn torch"
       ]
     },
     {
@@ -63,7 +73,9 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "import scipy.sparse as sp\n",
-        "from sklearn.metrics.pairwise import cosine_similarity"
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "import torch.nn as nn\n",
+        "import torch"
       ]
     },
     {
@@ -324,6 +336,41 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Demographic filtering\n"
+      ],
+      "metadata": {
+        "id": "jzCRcjnoG9ip"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wJAx1cSTyESF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Collabarative filtering\n",
+        "\n",
+        "## 1. Memory based\n",
+        "\n",
+        "\n",
+        "*   user-item based method\n",
+        "*   item-user based\n"
+      ],
+      "metadata": {
+        "id": "uQc55SIHNYWy"
+      }
     },
     {
       "cell_type": "code",
@@ -1659,14 +1706,14 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_top_k_users(user_id,dataframe, k):\n",
+        "def get_top_k_users(user_id, dataframe, k):\n",
         "  user_row = dataframe[user_id]\n",
         "  sorted_users = user_row.sort_values(ascending=False).drop(user_id)\n",
         "  return sorted_users.head(k)\n",
         "\n",
         "\n",
-        "top_k_users = get_top_k_users(1,users_similarity_dataframe,5)\n",
-        "top_k_users"
+        "top_k_users_movies = get_top_k_users(user_id=1, dataframe=users_similarity_dataframe, k=5)\n",
+        "top_k_users_movies"
       ],
       "metadata": {
         "colab": {
@@ -1744,10 +1791,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Need to calculate the same for the product based method as above"
+        "### Need to calculate the same for the product based method as above"
       ],
+      "metadata": {
+        "id": "wNTyc40cNhQS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "id": "2P58cErL5dLT"
       },
@@ -1755,40 +1809,188 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# first we need to seperate the data into train_set & test_set.\n",
-        "# after that we need evaluate it with the test_set\n",
+        "## Evaluate the model\n",
         "\n",
-        "# There is one stratergy, is get a one(1) item from the high interest from that selected user.\n",
-        "# after that we take 100 products from the test_set, will choose this 100 randomly.\n",
+        "#### first we need to seperate the data into train_set & test_set. After that we need evaluate it with the test_set\n",
         "\n",
-        "# Now we have 101 products.\n",
-        "# Now lets ask our model to predict a recommended product to that user.\n",
+        "&nbsp;\n",
         "\n",
-        "# Now to evaluate that we can create a function check how many times that selected ,\n",
-        "# 1 products is present in the top 10 recommendations"
+        "#### There is one stratergy, is get a one(1) item from the high interest from that selected user. After that we take 100 products from the test_set, will choose this 100 randomly.\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "#### Now we have 101 products. Now lets ask our model to predict a recommended product to that user.\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "#### Now to evaluate that we can create a function check how many times that selected, 1 products is present in the top 10 or 5 recommendations"
       ],
       "metadata": {
-        "id": "IWJjvOII6Aw1"
+        "id": "Fe-zGlp7LXGQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Model based\n",
+        "\n",
+        "for this we can use SVD (singular value decompositon).\n",
+        "\n",
+        "Simply svd is basically we divide the vector into 3 vectors (svd is matrix factorizatrization method)"
+      ],
+      "metadata": {
+        "id": "Cb4cYTRbxogM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Content based filtering\n",
+        "\n",
+        "- we can use the tags, genre, actor & director as a table / feature wise to recommend a movie, get the cosine_similarity for particular user or product."
+      ],
+      "metadata": {
+        "id": "qWJBMiGDP9_n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### AutoRec\n",
+        "we use autoencoder to colabarative filtering"
+      ],
+      "metadata": {
+        "id": "E9VjdzbM2p_L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class AutoRec(nn.Module):\n",
+        "  def __init__(self, in_features, latent_dim):\n",
+        "    super().__init__()\n",
+        "    self.encoder = nn.Sequential(\n",
+        "        nn.Linear(in_features=in_features, out_features=latent_dim),\n",
+        "        nn.Sigmoid()\n",
+        "    )\n",
+        "    self.dropout = nn.Dropout()\n",
+        "    self.decoder = nn.Linear(in_features=latent_dim, out_features=in_features)\n",
+        "\n",
+        "\n",
+        "  def forward(self, input):\n",
+        "    x = self.encoder(input)\n",
+        "    x = self.dropout(x)\n",
+        "    pred = self.decoder(x)\n",
+        "\n",
+        "    if torch.no_grad():\n",
+        "      return pred\n",
+        "    else:\n",
+        "      return pred + input"
+      ],
+      "metadata": {
+        "id": "9Tc74_AEQYLj"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "input = torch.randn([100, 100])\n",
+        "users = input.shape[0]\n",
+        "latent_dim = 10\n",
+        "# Latent dim is we can choose by your own\n",
+        "epochs = 10\n",
+        "\n",
+        "\n",
+        "model = AutoRec(in_features=users, latent_dim=latent_dim)\n",
+        "model.train()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+        "\n",
+        "for epoch in range(epochs):\n",
+        "  for i in range(input.shape[0]):\n",
+        "    # print(f\"Epoch {epoch}\")\n",
+        "\n",
+        "    pred  = model(input[i])\n",
+        "\n",
+        "    loss = nn.MSELoss()\n",
+        "    mse_loss = loss(pred, input[i])\n",
+        "    rmse = torch.sqrt(mse_loss)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    rmse.backward()\n",
+        "\n",
+        "    optimizer.step()\n",
+        "\n",
+        "\n",
+        "\n",
+        "model.eval()\n",
+        "pred = model(input[0]) # In here I am asking the model to give your predicton for the user 1.\n",
+        "print(input[0])\n",
+        "print(pred)\n",
+        "\n",
+        "# after that you need to get the top_k element from to recoomend those to the users."
+      ],
       "metadata": {
-        "id": "HRQlAFMf6AlB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gjGxV2_6svQK",
+        "outputId": "f2420592-1d68-45e6-f0a4-c72f3c1b239c",
+        "collapsed": true
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 0.1569, -0.8880, -1.8090,  0.0533, -0.2345, -0.5503,  0.1634, -1.1192,\n",
+            "         1.3419,  0.4630,  1.8290,  0.4724,  0.3534,  0.3942, -0.0096,  0.6608,\n",
+            "         2.1280, -0.8308, -1.7768, -0.4225,  1.3035, -1.0507, -0.4531, -0.0909,\n",
+            "        -1.9246,  1.6982,  1.4810,  0.3186,  0.1166,  1.1957, -0.3102,  1.2373,\n",
+            "        -0.0429, -0.1730,  0.7420,  1.3644,  0.0401, -0.6371,  0.8750, -0.3972,\n",
+            "         1.2331,  1.2604, -0.8417,  0.4238, -1.6753, -2.3879,  1.2774,  0.4826,\n",
+            "         0.2366,  0.3416, -0.0182,  0.4511,  2.1615,  0.5718, -1.1714,  1.3658,\n",
+            "         1.0689,  0.2166,  1.1277,  0.6170, -0.6369,  0.7577, -0.9984, -1.2934,\n",
+            "        -1.2935, -0.2365,  0.0133,  0.2902,  1.9201,  0.1018, -1.4277,  0.1920,\n",
+            "        -1.2108,  0.4681,  0.0424,  0.7348,  0.3380, -0.1112,  1.4725, -0.7971,\n",
+            "         1.7489, -0.5333,  0.5977, -0.7100, -0.2172, -1.3691,  0.2184,  1.0310,\n",
+            "        -0.7431,  1.9961, -0.7743,  0.2505,  0.6935, -1.0214,  0.1634,  0.3132,\n",
+            "         1.0361,  1.4256,  0.0982,  0.3568])\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0.1411, -0.1930,  0.0381, -0.1252, -0.1185,  0.0265, -0.0368, -0.0595,\n",
+              "        -0.0781, -0.1753,  0.1532, -0.0683, -0.0040,  0.0736, -0.0907, -0.0687,\n",
+              "         0.0369,  0.0642, -0.0374,  0.0913, -0.1280, -0.1742, -0.1217, -0.0960,\n",
+              "         0.0618,  0.1004,  0.0969, -0.1012,  0.0177, -0.1106,  0.1438, -0.1147,\n",
+              "        -0.0956,  0.0273,  0.0237, -0.1316, -0.0344,  0.1054, -0.0807, -0.1807,\n",
+              "         0.0159, -0.0400, -0.0298, -0.0930, -0.0796, -0.0005,  0.1220,  0.0306,\n",
+              "         0.0026, -0.0802, -0.1520, -0.1359,  0.1046,  0.0579,  0.0136, -0.0342,\n",
+              "        -0.0984,  0.0658,  0.1315,  0.0426,  0.0171,  0.1765,  0.0847, -0.0462,\n",
+              "         0.1923,  0.1752,  0.0519,  0.0460,  0.0026, -0.1134, -0.0917, -0.0059,\n",
+              "        -0.3671, -0.0704,  0.0045,  0.2124,  0.1008, -0.0035, -0.0586, -0.0096,\n",
+              "         0.1266,  0.0652,  0.0203,  0.1856,  0.0307,  0.0031,  0.0594, -0.0791,\n",
+              "        -0.1250,  0.0385,  0.0013,  0.0774,  0.0042, -0.0246,  0.1392, -0.1141,\n",
+              "        -0.0268,  0.1774,  0.0174, -0.1142], grad_fn=<ViewBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLzrh4/SMiF4LDllBppVTZ",
+      "authorship_tag": "ABX9TyNRrXslKGbkPPDHLQF9vqUM",
       "include_colab_link": true
     },
     "kernelspec": {
